# scanner-app

./: .gitignore  CMakeLists.txt  README.md
config/: config.h
include/: BarcodeScanner.h  FoodDatabase.h  FoodItem.h  OpenFoodFactsClient.h
src/: BarcodeScanner.cpp  FoodDatabase.cpp  FoodItem.cpp  OpenFoodFactsClient.cpp  main.cpp
